Lighten custom font weight

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             fontSize = windowWidth * 0.05;
             fontSize = constrain(fontSize, 28, 110);
             textSize(fontSize);
-            textStyle(BOLD);
+            textStyle(NORMAL);
             textAlign(CENTER, CENTER);
             prepareFont().then((fontName) => {
                 customFont = fontName;
