--- a/index.html
+++ b/index.html
@@ -30,33 +30,54 @@
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: 10;
-            padding: 1rem 1.5rem;
-            font-size: clamp(1.5rem, 3vw, 2.5rem);
-            font-weight: 400;
-            font-family: "Comforter Brush", cursive;
-            text-transform: none;
-            letter-spacing: 0.05em;
-            color: rgba(255, 255, 255, 0.95);
-            background: rgba(255, 255, 255, 0.1);
-            border: 2px solid rgba(255, 255, 255, 0.8);
-            border-radius: 50px;
+            padding: 0;
+            width: clamp(6rem, 14vw, 9rem);
+            height: auto;
+            aspect-ratio: 1.2 / 1;
+            background: transparent;
+            border: none;
             cursor: pointer;
-            transition: all 220ms ease;
-            backdrop-filter: blur(8px);
+            transition: transform 220ms ease;
+        }
+
+        .play-button svg {
+            width: 100%;
+            height: 100%;
+            display: block;
+            filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.3));
+        }
+
+        .play-button path {
+            transition: fill 220ms ease, stroke 220ms ease;
         }
 
         .play-button:hover,
         .play-button:focus-visible {
-            color: #fff;
-            background: rgba(255, 255, 255, 0.2);
-            border-color: #fff;
-            transform: translate(-50%, -50%) scale(1.05);
+            transform: translate(-50%, -50%) scale(1.1);
             outline: none;
+        }
+
+        .play-button:hover path {
+            fill: rgba(255, 255, 255, 0.25);
+            stroke: #fff;
         }
     </style>
 </head>
 <body>
-    <button class="play-button" id="play-button">PLAY <3</button>
+    <button class="play-button" id="play-button" aria-label="Play">
+        <svg viewBox="0 0 100 85" xmlns="http://www.w3.org/2000/svg">
+            <path d="M50 85 C10 60 0 40 0 25 C0 10 15 0 32 0 C42 0 50 10 50 10 C50 10 58 0 68 0 C85 0 100 10 100 25 C100 40 90 60 50 85 Z"
+                  fill="rgba(255, 255, 255, 0.15)"
+                  stroke="rgba(255, 255, 255, 0.8)"
+                  stroke-width="2" />
+            <text x="50" y="45"
+                  text-anchor="middle"
+                  dominant-baseline="middle"
+                  fill="white"
+                  font-family="'Comforter Brush', cursive"
+                  font-size="22">PLAY &lt;3</text>
+        </svg>
+    </button>
     <script>
         const playButton = document.getElementById("play-button");
         playButton.addEventListener("click", () => {
