--- a/index.html
+++ b/index.html
@@ -31,25 +31,30 @@
             transform: translate(-50%, -50%);
             z-index: 10;
             padding: 0;
-            width: clamp(6rem, 14vw, 9rem);
-            height: auto;
-            aspect-ratio: 1.2 / 1;
             background: transparent;
             border: none;
             cursor: pointer;
             transition: transform 220ms ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
-        .play-button svg {
-            width: 100%;
-            height: 100%;
+        .play-button img {
+            width: clamp(8rem, 18vw, 14rem);
+            height: auto;
             display: block;
-            filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.3));
-            overflow: visible;
+            filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.4));
         }
 
-        .play-button path.main-heart {
-            transition: fill 220ms ease, stroke 220ms ease;
+        .play-text {
+            position: absolute;
+            font-size: clamp(1.8rem, 4vw, 3.5rem);
+            font-weight: 400;
+            font-family: "Comforter Brush", cursive;
+            color: #ff69b4;
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+            pointer-events: none;
         }
 
         .play-button:hover,
@@ -57,63 +62,12 @@
             transform: translate(-50%, -50%) scale(1.1);
             outline: none;
         }
-
-        .play-button:hover path.main-heart {
-            fill: #ffffff;
-            stroke: #fff;
-        }
-
-        .mini-heart {
-            opacity: 0;
-            transform-origin: center;
-            pointer-events: none;
-        }
-
-        .play-button:hover .mini-heart {
-            animation: pop-heart 1s ease-out infinite;
-        }
-
-        .play-button:hover .mini-heart:nth-child(3) { animation-delay: 0s; }
-        .play-button:hover .mini-heart:nth-child(4) { animation-delay: 0.2s; }
-        .play-button:hover .mini-heart:nth-child(5) { animation-delay: 0.4s; }
-        .play-button:hover .mini-heart:nth-child(6) { animation-delay: 0.6s; }
-
-        @keyframes pop-heart {
-            0% {
-                opacity: 0;
-                transform: scale(0.2) translate(0, 0);
-            }
-            20% {
-                opacity: 0.8;
-                transform: scale(0.6) translate(var(--tx), var(--ty));
-            }
-            100% {
-                opacity: 0;
-                transform: scale(1.2) translate(calc(var(--tx) * 2), calc(var(--ty) * 2));
-            }
-        }
     </style>
 </head>
 <body>
     <button class="play-button" id="play-button" aria-label="Play">
-        <svg viewBox="0 0 100 85" xmlns="http://www.w3.org/2000/svg">
-            <path class="main-heart" d="M50 85 C10 60 0 40 0 25 C0 10 15 0 32 0 C42 0 50 10 50 10 C50 10 58 0 68 0 C85 0 100 10 100 25 C100 40 90 60 50 85 Z"
-                  fill="rgba(255, 255, 255, 0.15)"
-                  stroke="rgba(255, 255, 255, 0.8)"
-                  stroke-width="2" />
-            <text x="50" y="45"
-                  text-anchor="middle"
-                  dominant-baseline="middle"
-                  fill="#ff69b4"
-                  font-family="'Comforter Brush', cursive"
-                  font-size="22">PLAY &lt;3</text>
-            
-            <!-- Mini hearts for hover effect -->
-            <path class="mini-heart" style="--tx: -20px; --ty: -30px;" d="M50 85 C10 60 0 40 0 25 C0 10 15 0 32 0 C42 0 50 10 50 10 C50 10 58 0 68 0 C85 0 100 10 100 25 C100 40 90 60 50 85 Z" fill="#ff69b4" transform="scale(0.2)" />
-            <path class="mini-heart" style="--tx: 20px; --ty: -30px;" d="M50 85 C10 60 0 40 0 25 C0 10 15 0 32 0 C42 0 50 10 50 10 C50 10 58 0 68 0 C85 0 100 10 100 25 C100 40 90 60 50 85 Z" fill="#ff69b4" transform="scale(0.2)" />
-            <path class="mini-heart" style="--tx: -30px; --ty: 10px;" d="M50 85 C10 60 0 40 0 25 C0 10 15 0 32 0 C42 0 50 10 50 10 C50 10 58 0 68 0 C85 0 100 10 100 25 C100 40 90 60 50 85 Z" fill="#ff69b4" transform="scale(0.2)" />
-            <path class="mini-heart" style="--tx: 30px; --ty: 10px;" d="M50 85 C10 60 0 40 0 25 C0 10 15 0 32 0 C42 0 50 10 50 10 C50 10 58 0 68 0 C85 0 100 10 100 25 C100 40 90 60 50 85 Z" fill="#ff69b4" transform="scale(0.2)" />
-        </svg>
+        <img src="Photoroom_20251118_232501.png" alt="Play button" />
+        <span class="play-text">PLAY</span>
     </button>
     <script>
         const playButton = document.getElementById("play-button");
@@ -266,7 +220,7 @@
                     opacity = map(this.homeY, fadeBottomStart, height + rowSpacing * 0.8, 255, 0, true);
                 }
 
-                fill(255, 192, 203, opacity);
+                fill(255, 255, 255, opacity);
                 noStroke();
                 text(this.char, this.x, this.y);
             }
