--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             background: transparent;
             border: none;
             cursor: pointer;
-            transition: transform 220ms ease;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -45,21 +44,28 @@
             height: auto;
             display: block;
             filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.4));
+            transition: filter 350ms ease;
         }
 
-        .play-text {
-            position: absolute;
-            font-size: clamp(1.8rem, 4vw, 3.5rem);
-            font-weight: 400;
-            font-family: "Comforter Brush", cursive;
-            color: #ff69b4;
-            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-            pointer-events: none;
+        .play-button:hover img,
+        .play-button:focus-visible img {
+            filter: drop-shadow(0 0 20px rgba(139, 0, 0, 0.9)) 
+                   drop-shadow(0 0 40px rgba(139, 0, 0, 0.6))
+                   drop-shadow(0 4px 12px rgba(0, 0, 0, 0.4))
+                   brightness(0.7)
+                   hue-rotate(-10deg)
+                   saturate(1.3);
         }
 
-        .play-button:hover,
+        .play-button:active img {
+            filter: drop-shadow(0 0 25px rgba(139, 0, 0, 1)) 
+                   drop-shadow(0 0 50px rgba(139, 0, 0, 0.8))
+                   brightness(0.5)
+                   hue-rotate(-20deg)
+                   saturate(1.5);
+        }
+
         .play-button:focus-visible {
-            transform: translate(-50%, -50%) scale(1.1);
             outline: none;
         }
     </style>
@@ -67,7 +73,6 @@
 <body>
     <button class="play-button" id="play-button" aria-label="Play">
         <img src="Photoroom_20251118_232501.png" alt="Play button" />
-        <span class="play-text">PLAY</span>
     </button>
     <script>
         const playButton = document.getElementById("play-button");
