Increase play button image size for mobile visibility

--- a/index.html
+++ b/index.html
@@ -40,10 +40,22 @@
         }
 
         .play-button img {
-            width: clamp(8rem, 18vw, 14rem);
+            width: clamp(12rem, 18vw, 14rem);
             height: auto;
             display: block;
             filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.4));
+        }
+
+        @media (max-width: 820px) {
+            .play-button img {
+                width: clamp(14rem, 35vw, 18rem);
+            }
+        }
+
+        @media (max-width: 480px) {
+            .play-button img {
+                width: clamp(16rem, 50vw, 22rem);
+            }
         }
 
         .play-button:focus-visible {
