--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         }
 
         .play-button img {
-            width: clamp(14rem, 22vw, 16rem);
+            width: min(28vw, 28rem);
+            max-width: 90vw;
             height: auto;
             display: block;
             filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.4));
@@ -48,13 +49,13 @@
 
         @media (max-width: 820px) {
             .play-button img {
-                width: clamp(20rem, 45vw, 26rem);
+                width: min(70vw, 40rem);
             }
         }
 
         @media (max-width: 480px) {
             .play-button img {
-                width: clamp(24rem, 65vw, 32rem);
+                width: min(80vw, 45rem);
             }
         }
 
