--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             max-width: 90vw;
             height: auto;
             display: block;
-            filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.4));
+            filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.4)) grayscale(100%) contrast(1.2) brightness(1.1);
         }
 
         @media (max-width: 820px) {
