--- a/index.html
+++ b/index.html
@@ -30,13 +30,26 @@
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: 10;
-            padding: 0;
-            background: transparent;
+            padding: 3rem;
+            background: #000000;
             border: none;
             cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: center;
+            box-shadow: 0 0 0 100vmax #000000;
+        }
+
+        @media (max-width: 820px) {
+            .play-button {
+                padding: 2.5rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .play-button {
+                padding: 2rem;
+            }
         }
 
         .play-button img {
