Use Comforter Brush everywhere and add Syxy ticker on play page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             background: black;
             overscroll-behavior: none;
             touch-action: none;
+            font-family: "Comforter Brush", cursive;
         }
         canvas {
             display: block;
