--- a/play.html
+++ b/play.html
@@ -21,12 +21,17 @@
             color: #f8f8f8;
             display: flex;
             flex-direction: column;
+            padding-top: 4.5rem;
         }
         header {
             padding: 0;
-            position: sticky;
+            position: fixed;
             top: 0;
-            z-index: 20;
+            left: 0;
+            right: 0;
+            width: 100%;
+            z-index: 1000;
+            background: #000000;
         }
         .syxy-ticker {
             overflow: hidden;
