--- a/play.html
+++ b/play.html
@@ -21,16 +21,15 @@
             color: #f8f8f8;
             display: flex;
             flex-direction: column;
-            padding-top: 4.5rem;
         }
         header {
             padding: 0;
-            position: fixed;
+            position: absolute;
             top: 0;
             left: 0;
             right: 0;
             width: 100%;
-            z-index: 1000;
+            z-index: 20;
             background: #000000;
         }
         .syxy-ticker {
