--- a/play.html
+++ b/play.html
@@ -84,6 +84,29 @@
             display: block;
             border-radius: 0.4rem;
         }
+        .socials {
+            padding: 2.5rem 0 4rem;
+            display: flex;
+            justify-content: center;
+            gap: 2.75rem;
+        }
+        .socials a {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 2.6rem;
+            height: 2.6rem;
+            color: #f8f8f8;
+            text-decoration: none;
+        }
+        .socials svg {
+            width: 100%;
+            height: 100%;
+            fill: #ffffff;
+        }
+        .socials a:hover svg {
+            opacity: 0.7;
+        }
         @media (max-width: 720px) {
             .syxy-ticker {
                 padding: 1rem clamp(1rem, 5vw, 2rem);
@@ -142,6 +165,38 @@
         <article class="stack-item">
             <img src="iCloud Photos from OP OP 2/4.png" alt="Syxy still 4" loading="lazy" />
         </article>
+    </section>
+
+    <section class="socials">
+        <!-- Instagram -->
+        <a href="https://instagram.com/syxy" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <rect x="3" y="3" width="18" height="18" rx="5" ry="5" fill="none" stroke="white" stroke-width="1.5"/>
+                <circle cx="12" cy="12" r="4.5" fill="none" stroke="white" stroke-width="1.5"/>
+                <circle cx="17" cy="7" r="1.1" fill="white"/>
+            </svg>
+        </a>
+        <!-- TikTok -->
+        <a href="https://www.tiktok.com/@syxxxxy" target="_blank" rel="noopener noreferrer" aria-label="TikTok">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M15.5 4.5C16.1 5.4 17 6 18 6.2V8.7C17.1 8.6 16.2 8.3 15.5 7.9V14.5C15.5 17 13.5 19 11 19C8.5 19 6.5 17 6.5 14.5C6.5 12 8.5 10 11 10C11.3 10 11.7 10.1 12 10.1V12.7C11.8 12.6 11.4 12.5 11.1 12.5C10 12.5 9.1 13.4 9.1 14.5C9.1 15.6 10 16.5 11.1 16.5C12.2 16.5 13.1 15.6 13.1 14.5V4.5H15.5Z" fill="white"/>
+            </svg>
+        </a>
+        <!-- Spotify -->
+        <a href="https://open.spotify.com/artist/5PaDQt5blNzLa0VtvpuTAL" target="_blank" rel="noopener noreferrer" aria-label="Spotify">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="12" cy="12" r="10" fill="none" stroke="white" stroke-width="1.5"/>
+                <path d="M7.5 10C10.1 9 13 9 16 10" fill="none" stroke="white" stroke-width="1.2" stroke-linecap="round"/>
+                <path d="M7.7 12.5C10 11.8 12.4 11.9 14.7 12.8" fill="none" stroke="white" stroke-width="1" stroke-linecap="round"/>
+                <path d="M8 15C9.8 14.6 11.6 14.7 13.3 15.3" fill="none" stroke="white" stroke-width="0.9" stroke-linecap="round"/>
+            </svg>
+        </a>
+        <!-- Apple Music -->
+        <a href="https://music.apple.com/in/artist/syxy/1831920602" target="_blank" rel="noopener noreferrer" aria-label="Apple Music">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M16.5 3L9 4.8C8.4 4.9 8 5.4 8 6V15.1C7.5 14.9 6.9 14.8 6.3 14.8C4.5 14.8 3 15.9 3 17.4C3 18.9 4.3 20 6.1 20C7.9 20 9.3 18.9 9.3 17.4V10.6L16 9V13.1C15.5 12.9 14.9 12.8 14.3 12.8C12.5 12.8 11 13.9 11 15.4C11 16.9 12.3 18 14.1 18C15.9 18 17.3 16.9 17.3 15.4V4C17.3 3.5 16.9 3 16.5 3Z" fill="white"/>
+            </svg>
+        </a>
     </section>
 
 </body>
