Add COPYRIGHT SYXY footer note

--- a/play.html
+++ b/play.html
@@ -107,6 +107,12 @@
         .socials a:hover svg {
             opacity: 0.7;
         }
+        .footer-note {
+            padding: 0 0 3rem;
+            text-align: center;
+            font-size: 0.8rem;
+            letter-spacing: 0.18em;
+        }
         @media (max-width: 720px) {
             .syxy-ticker {
                 padding: 1rem clamp(1rem, 5vw, 2rem);
@@ -198,6 +204,10 @@
             </svg>
         </a>
     </section>
+
+    <div class="footer-note">
+        COPYRIGHT SYXY
+    </div>
 
 </body>
 </html>
