Optimize video loading: change to preload=metadata and add poster

--- a/play.html
+++ b/play.html
@@ -146,7 +146,7 @@
     </header>
 
     <section class="hero">
-        <video src="videos/syxy-hero.mp4" autoplay muted loop playsinline preload="auto"></video>
+        <video src="videos/syxy-hero.mp4" autoplay muted loop playsinline preload="metadata" poster="images/top-1.jpg"></video>
     </section>
 
     <section class="stack">
