Optimize hero video: 76% smaller (1.7MB vs 7.2MB) with H.264 compression

--- a/play.html
+++ b/play.html
@@ -146,7 +146,9 @@
     </header>
 
     <section class="hero">
-        <video src="videos/syxy-hero.mp4" autoplay muted loop playsinline preload="metadata"></video>
+        <video autoplay muted loop playsinline preload="metadata">
+            <source src="videos/syxy-hero-optimized.mp4" type="video/mp4">
+        </video>
     </section>
 
     <section class="stack">
