Test: Option 1 - Frosted Glass effect for play button

--- a/index.html
+++ b/index.html
@@ -31,13 +31,22 @@
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: 10;
-            padding: 0;
-            background: transparent;
-            border: none;
+            padding: 3rem;
+            background: rgba(0, 0, 0, 0.4);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 50%;
             cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: center;
+            transition: all 0.3s ease;
+        }
+
+        .play-button:hover {
+            background: rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(15px);
+            transform: translate(-50%, -50%) scale(1.05);
         }
 
         .play-button img {
