--- a/play.html
+++ b/play.html
@@ -32,16 +32,16 @@
             height: 100%;
             pointer-events: none;
             z-index: 1;
-            opacity: 0.08;
+            opacity: 0.12;
         }
         .floating-icon {
             position: absolute;
             animation: float-drift 20s ease-in-out infinite;
         }
         .floating-icon svg {
-            width: clamp(20px, 3vw, 40px);
-            height: clamp(20px, 3vw, 40px);
-            fill: url(#icon-gradient);
+            width: clamp(24px, 4vw, 50px);
+            height: clamp(24px, 4vw, 50px);
+            fill: white;
         }
         @keyframes float-drift {
             0%, 100% {
