--- a/play.html
+++ b/play.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <link rel="preload" as="video" href="videos/syxy-hero.mp4" type="video/mp4" />
-    <title>Play</title>
+    <title>SYXY</title>
     <style>
         :root { color-scheme: dark; }
         * { box-sizing: border-box; }
