--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SYXY</title>
-    <link rel="preload" href="fonts/ComforterBrush-Regular.woff" as="font" type="font/woff" crossorigin />
-    <link rel="preload" href="Photoroom_20251118_232501.png" as="image" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
     <style>
         @font-face {
@@ -18,21 +15,14 @@
         body {
             margin: 0;
             padding: 0;
-            width: 100%;
-            height: 100%;
             overflow: hidden;
-            background: #000;
+            background: black;
             overscroll-behavior: none;
             touch-action: none;
             font-family: "Comforter Brush", cursive;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
         }
         canvas {
             display: block;
-            position: fixed;
-            top: 0;
-            left: 0;
             -webkit-mask-image: radial-gradient(circle at center, transparent 0%, transparent 18%, black 32%, black 100%);
             mask-image: radial-gradient(circle at center, transparent 0%, transparent 18%, black 32%, black 100%);
         }
@@ -63,7 +53,6 @@
             height: auto;
             display: block;
             filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.4)) grayscale(100%) contrast(1.2) brightness(1.1);
-            will-change: transform;
         }
 
         @media (max-width: 820px) {
@@ -240,8 +229,7 @@
         }
 
         function setup() {
-            const canvas = createCanvas(windowWidth, windowHeight);
-            canvas.parent(document.body);
+            createCanvas(windowWidth, windowHeight);
             const devicePixelRatioSafe = window.devicePixelRatio || 1;
             const forceLowDensity = windowWidth <= mobileBreakpoint ? 1 : Math.min(devicePixelRatioSafe, 1.5);
             pixelDensity(forceLowDensity);
