--- a/play.html
+++ b/play.html
@@ -29,12 +29,8 @@
             left: 0;
             right: 0;
             width: 100%;
-            z-index: 100;
+            z-index: 20;
             background: #000000;
-            pointer-events: none;
-        }
-        header * {
-            pointer-events: auto;
         }
         .syxy-ticker {
             overflow: hidden;
@@ -64,6 +60,7 @@
             height: 100%;
             object-fit: cover;
             filter: contrast(1.1) saturate(1.05);
+            will-change: transform;
         }
         .hero::after {
             content: "";
@@ -86,14 +83,11 @@
             height: auto;
             display: block;
             border-radius: 0.4rem;
-            max-width: 100%;
         }
         .socials {
             padding: 2.5rem 0 4rem;
             display: flex;
             justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
             gap: 2.75rem;
         }
         .socials a {
@@ -104,7 +98,6 @@
             height: 2.6rem;
             color: #f8f8f8;
             text-decoration: none;
-            transition: opacity 0.2s ease;
         }
         .socials svg {
             width: 100%;
