Add radial glow effect to video fade (vignette style)

--- a/play.html
+++ b/play.html
@@ -65,7 +65,7 @@
         .hero .video-fade {
             position: absolute;
             inset: 0;
-            background: linear-gradient(180deg, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.95) 50%, rgb(0,0,0) 100%);
+            background: radial-gradient(ellipse at center, transparent 0%, rgba(0,0,0,0.3) 25%, rgba(0,0,0,0.75) 50%, rgba(0,0,0,0.95) 75%, rgb(0,0,0) 100%);
             opacity: 0;
             z-index: 1;
             pointer-events: none;
